# secret-hitler

./: .ghcid  .gitignore  ChangeLog.md  README.md  default.nix  package.yaml  presentation.md  secret-hitler.cabal
app/: Main.hs
backend/: backend.cabal
backend/src/: Backend.hs  Game.hs  Lobby.hs  Random.hs
backend/test/: main.hs
common/: common.cabal
common/src/Common/: GameMessages.hs  MessageTypes.hs  Route.hs
frontend/: frontend.cabal  index.html  style.css
frontend/src/: Frontend.hs
frontend/src-bin/: main.hs
src/: Data.hs  Game.hs
src/Data/: InfiniteList.hs
static/: main.css  main.html
