name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
    base,
    obelisk-route,
    mtl,
    text,
    aeson
  exposed-modules:
    Common.Route
    Common.MessageTypes
  ghc-options: -Wall
  default-extensions:
    OverloadedLabels
    DuplicateRecordFields
    DerivingStrategies
    NamedFieldPuns
    TypeFamilies
    GeneralizedNewtypeDeriving
    DeriveGeneric
    OverloadedStrings
    LambdaCase
