name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
    base,
    obelisk-route,
    mtl,
    text,
    aeson,
    dependent-sum,
    containers
  exposed-modules:
    Common.Route
    Common.MessageTypes
    Common.GameMessages
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-name-shadowing
    -Wno-orphans
    -Wno-unsafe
    -Wno-missing-local-signatures
    -Wno-partial-fields
  default-extensions:
    GADTs
    DataKinds
    TypeFamilies
    OverloadedStrings
    RankNTypes
    TypeApplications
    ScopedTypeVariables
    RecursiveDo
    GeneralizedNewtypeDeriving
    AllowAmbiguousTypes
    OverloadedLabels
    DuplicateRecordFields
    DerivingStrategies
    NamedFieldPuns
    DeriveGeneric
    LambdaCase
    MultiWayIf
    TupleSections
