name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
    base,
    common,
    obelisk-frontend,
    obelisk-route,
    jsaddle,
    reflex-dom,
    obelisk-executable-config-lookup,
    obelisk-generated-static,
    text,
    modern-uri,
    generic-lens,
    lens,
    aeson,
    dependent-sum,
    containers
  exposed-modules:
    Frontend
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-name-shadowing
    -Wno-orphans
    -Wno-unsafe
    -Wno-missing-local-signatures
    -Wno-partial-fields
  default-extensions:
    GADTs
    DataKinds
    TypeFamilies
    OverloadedStrings
    RankNTypes
    TypeApplications
    ScopedTypeVariables
    RecursiveDo
    GeneralizedNewtypeDeriving
    AllowAmbiguousTypes
    OverloadedLabels
    DuplicateRecordFields
    DerivingStrategies
    NamedFieldPuns
    DeriveGeneric
    LambdaCase
    MultiWayIf
    TupleSections

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends:
    base,
    common,
    obelisk-frontend,
    obelisk-route,
    reflex-dom,
    obelisk-generated-static,
    frontend
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
